syntax = "proto3";
package AddressDelete;
option objc_class_prefix="AddressDelete";
option java_package = "com.asiainno.hekka.proto.user.address";

//url: https://****.com/user/address/delete
message Request {
    int64 id = 1;// 地址主键
}
message Response {}
